css/custom.css
@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap');

body {
    font-family: 'Lato', Arial;
    font-weight: 300;
    color: #333333;
    background: linear-gradient(90deg, #f0f0f0 50%, #ffffff 50%);
}

a {
    color: #333333;
    text-decoration: none;
}

a:active
{
    outline:none;
}

.main-grid .grid-new-game,
.main-grid .grid-player1,
.main-grid .grid-player2,
.main-grid .grid-dice,
.main-grid .grid-current-player,
.main-grid .grid-player-options,
.main-grid .grid-roll-dice,
.main-grid .grid-hold
{
    text-align: center;
}

/* To better see the structure just for dev */
/*ion-grid, ion-row, ion-col {
    border: 1px solid #CCCCCC;
}*/

.main-grid {
    height: 100%;
}

.top-row {
    height: 10%;
}

.middle-row {
    height: 60%;
}

.bottom-row {
    height: 30%;
}

.global-score {
    font-size: 4em;
    color: #ea4d4c;
}

.current-score {
    font-size: 2em;
    color: #ffffff;
    font-weight: 400;
}

#player1Name,
#player2Name
{
    font-size: 2em;
}

#newGame,
#rollDice,
#hold
{
    font-size: 1.4em;
}

.current-square {
    background-color: #ea4d4c;
    padding: 20px;
    width: 50%;
    margin: auto;
}

ion-icon {
    color: #ea4d4c;
}

.current-point {
    display: none;
    height: 16px;
}

.current-point.active {
    display: inline-block;
}

#dice img {
    box-shadow: 0px -1px 37px -7px rgba(87,87,87,0.41);
    -webkit-box-shadow: 0px -1px 37px -7px rgba(87,87,87,0.41);
    -moz-box-shadow: 0px -1px 37px -7px rgba(87,87,87,0.41);
}

